# BetterRTX-Installer

.github/: copilot-instructions.md
.github/workflows/: devskim.yml  powershell.yml  tauri.yml  v3-tag.yml
.windsurf/rules/: css.md  tauri.md  typescript.md
v3/: index.html  package.json  tsconfig.json  vite.config.ts
v3/public/locales/en/: translation.json
v3/public/locales/zh/: translation.json
v3/src/: i18n.ts  icons.ts  main.ts  main.tsx  styles.css  theme.css  vite-env.d.ts
v3/src-tauri/: Cargo.toml  tauri.conf.json
v3/src-tauri/capabilities/: default.json
v3/src-tauri/icons/: icon.icns
v3/src-tauri/src/: lib.rs  main.rs
v3/src/components/: ActionsTab.tsx  App.tsx  AppHeader.tsx  ConsolePanel.tsx  DeepLinkDialog.tsx  Disclaimer.tsx  InstallationCard.tsx  LanguageSelector.tsx  Logo.tsx  OptionsDialog.tsx  PresetCard.tsx  PresetIcon.tsx  PresetsTab.tsx  RtpackDialog.tsx  SelectInstallationsDialog.tsx  StatusBar.tsx  ToolbarSection.tsx  base-component.ts  console-panel.ts  installation-card.ts  preset-card.ts  status-bar.ts  toolbar-section.ts
v3/src/components/actions/: ActionsTab.tsx
v3/src/components/creator/: CreatorIcon.tsx  CreatorNameModal.tsx  CreatorTab.tsx
v3/src/components/installations/: InstallationCard.tsx  InstallationInstanceModal.tsx  InstallationNav.tsx  InstallationsPanel.tsx  InstallationsTab.tsx  InstallationsToolbar.tsx  IoBitPanel.tsx
v3/src/components/presets/: PresetCard.tsx  PresetIcon.tsx  PresetsTab.tsx
v3/src/components/ui/: BedrockGraphicsLink.tsx  BlockPath.tsx  Button.tsx  DropzoneIndicator.tsx  Modal.tsx  SecondaryToolbar.tsx  SideNav.tsx  Switch.tsx
v3/src/store/: appStore.ts  presetsStore.ts  statusStore.ts
v3/src/styles/: theme.css  ui.css
