[package]
name = "brtx-installer"
version = "3.0.0"
description = "BetterRTX Installer"
authors = ["Jason J. Gardner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brtx_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["fs"] }
winreg = "0.52"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
url = "2.5"
base64 = "0.21"
